# libscs

./: CMakeLists.txt  README.md
include/libscs/: entry.hpp  filesystem.hpp  scs.hpp  sii.hpp  stream.hpp
src/: entry.cpp  filesystem.cpp  scs.cpp  sii.cpp  stream.cpp
tests/: parsing.cpp  test1.sii  test2.sii  test3.sii  test4.sii
tools/scs_extractor/src/: scs_extractor.cpp
tools/scsinfo/src/: scsinfo.cpp
